--- a/index.html
+++ b/index.html
@@ -1,14 +1,80 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
-  <link href='/style.css' rel='stylesheet'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>스마트 레시피 파인더 | 냉장고 파먹기</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
-  <script defer type="text/javascript" src="/main.js"></script>
+    <div class="background-texture"></div>
+    <main id="app">
+        <header>
+            <h1>🍳 스마트 레시피 파인더</h1>
+            <p>오늘 뭐 먹지? 재료만 입력하면 알려드려요!</p>
+        </header>
+
+        <!-- Step 1: Cuisine Selection -->
+        <section id="cuisine-section" class="step active">
+            <h2 class="section-title">1단계: 요리 분야를 선택하세요</h2>
+            <div class="cuisine-grid">
+                <button class="cuisine-card" data-cuisine="korean">
+                    <span class="emoji">🍚</span>
+                    <span class="label">한식</span>
+                </button>
+                <button class="cuisine-card" data-cuisine="japanese">
+                    <span class="emoji">🍣</span>
+                    <span class="label">일식</span>
+                </button>
+                <button class="cuisine-card" data-cuisine="chinese">
+                    <span class="emoji">🥡</span>
+                    <span class="label">중식</span>
+                </button>
+                <button class="cuisine-card" data-cuisine="western">
+                    <span class="emoji">🍝</span>
+                    <span class="label">양식</span>
+                </button>
+            </div>
+        </section>
+
+        <!-- Step 2: Ingredient Input -->
+        <section id="ingredient-section" class="step">
+            <h2 class="section-title">2단계: 남은 재료를 입력하세요</h2>
+            <p class="subtitle">선택한 분야: <span id="selected-cuisine-display">한식</span></p>
+            <div class="input-container">
+                <input type="text" id="ingredient-input" placeholder="재료를 입력하고 Enter를 누르세요 (예: 달걀, 양파)">
+                <button id="add-ingredient-btn">추가</button>
+            </div>
+            <div id="ingredient-tags" class="tag-cloud"></div>
+            <div class="action-bar">
+                <button id="back-to-cuisine" class="secondary-btn">이전으로</button>
+                <button id="find-recipe-btn" class="primary-btn">레시피 찾기</button>
+            </div>
+        </section>
+
+        <!-- Step 3: Recipe Results -->
+        <section id="recipe-section" class="step">
+            <h2 class="section-title">3단계: 추천 레시피</h2>
+            <div id="recipe-grid" class="recipe-grid">
+                <!-- Recipe cards will be injected here -->
+            </div>
+            <div class="action-bar">
+                <button id="restart-btn" class="secondary-btn">다시 시작하기</button>
+            </div>
+        </section>
+    </main>
+
+    <!-- Recipe Detail Modal -->
+    <dialog id="recipe-modal">
+        <div class="modal-content">
+            <button id="close-modal" class="close-btn">&times;</button>
+            <div id="modal-body"></div>
+        </div>
+    </dialog>
+
+    <script type="module" src="main.js"></script>
 </body>
 </html>
