feat: Google AdSense 광고 영역 추가 및 레이아웃 최적화

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>스마트 레시피 파인더 | 냉장고 파먹기</title>
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-xxxxxxxxxxxxxx" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,6 +18,19 @@
             <h1>🍳 스마트 레시피 파인더</h1>
             <p>오늘 뭐 먹지? 재료만 입력하면 알려드려요!</p>
         </header>
+
+        <!-- Ad Slot: Top -->
+        <div class="ad-container top-ad">
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-xxxxxxxxxxxxxx"
+                 data-ad-slot="xxxxxxxxx"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
 
         <!-- Step 1: Cuisine Selection -->
         <section id="cuisine-section" class="step active">
@@ -61,6 +76,20 @@
             <div id="recipe-grid" class="recipe-grid">
                 <!-- Recipe cards will be injected here -->
             </div>
+            
+            <!-- Ad Slot: Bottom -->
+            <div class="ad-container bottom-ad">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-xxxxxxxxxxxxxx"
+                     data-ad-slot="xxxxxxxxx"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+                <script>
+                     (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
+
             <div class="action-bar">
                 <button id="restart-btn" class="secondary-btn">다시 시작하기</button>
             </div>
