--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>스마트 레시피 파인더 | 냉장고 파먹기</title>
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-xxxxxxxxxxxxxx" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3971219491693844" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
         <div class="ad-container top-ad">
             <ins class="adsbygoogle"
                  style="display:block"
-                 data-ad-client="ca-pub-xxxxxxxxxxxxxx"
+                 data-ad-client="ca-pub-3971219491693844"
                  data-ad-slot="xxxxxxxxx"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
@@ -81,7 +81,7 @@
             <div class="ad-container bottom-ad">
                 <ins class="adsbygoogle"
                      style="display:block"
-                     data-ad-client="ca-pub-xxxxxxxxxxxxxx"
+                     data-ad-client="ca-pub-3971219491693844"
                      data-ad-slot="xxxxxxxxx"
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
