--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 </head>
 <body>
     <div class="background-texture"></div>
+    <nav class="top-nav">
+        <a href="index.html" class="nav-brand">🍳 스마트 레시피 파인더</a>
+        <div class="nav-links">
+            <a href="about.html">소개</a>
+            <a href="privacy.html">개인정보처리방침</a>
+        </div>
+    </nav>
     <main id="app">
         <header>
             <h1>🍳 스마트 레시피 파인더</h1>
