feat: 전 페이지 다국어 지원 및 브랜드명(냉털 / Fridge Raider) 동기화 완료

--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>개인정보처리방침 | 스마트 레시피 파인더</title>
+    <title>개인정보처리방침 | Privacy Policy - 냉털 | Fridge Raider</title>
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-3971219491693844">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3971219491693844" crossorigin="anonymous"></script>
@@ -15,38 +15,46 @@
 <body>
     <div class="background-texture"></div>
     <nav class="top-nav">
-        <a href="index.html" class="nav-brand">🍳 스마트 레시피 파인더</a>
+        <a href="index.html" class="nav-brand">🍳 <span class="app-name">냉털</span></a>
         <div class="nav-links">
-            <a href="about.html">소개</a>
-            <a href="privacy.html" class="active">개인정보처리방침</a>
+            <a href="about.html" data-t="about">소개</a>
+            <a href="privacy.html" class="active" data-t="privacy">개인정보처리방침</a>
+            <button id="lang-toggle" class="lang-btn">English</button>
         </div>
     </nav>
     <main id="app" class="content-page">
         <header>
-            <h1>개인정보처리방침</h1>
+            <h1 data-t="privacyTitle">개인정보처리방침</h1>
         </header>
         <section class="policy-content">
-            <p><strong>시행일:</strong> 2026년 2월 28일</p>
+            <p><strong data-t="privacyDate">시행일: 2026년 2월 28일</strong></p>
             
-            <h2>1. 수집하는 개인정보 항목</h2>
-            <p>스마트 레시피 파인더(이하 "본 사이트")는 회원가입을 요구하지 않으며, 사용자를 식별할 수 있는 개인정보(이름, 이메일, 전화번호 등)를 직접적으로 수집하거나 저장하지 않습니다. 사용자가 입력하는 '요리 재료' 데이터는 브라우저의 임시 메모리에만 유지되며 서버로 전송되지 않습니다.</p>
+            <div id="policy-body-ko" class="lang-content ko-only">
+                <h2>1. 수집하는 개인정보 항목</h2>
+                <p>냉털(이하 "본 사이트")은 회원가입을 요구하지 않으며, 사용자를 식별할 수 있는 개인정보를 직접적으로 수집하지 않습니다.</p>
+                <h2>2. 제3자 서비스</h2>
+                <p>본 사이트는 구글 애드센스(Google AdSense)를 통해 광고를 게재하며, 구글은 쿠키를 사용하여 사용자의 방문 기록을 바탕으로 광고를 제공합니다.</p>
+            </div>
 
-            <h2>2. 쿠키(Cookies) 및 웹 분석 도구의 사용</h2>
-            <p>본 사이트는 사용자 경험 향상과 광고 게재를 위해 구글(Google)을 포함한 타사 공급업체의 쿠키를 사용합니다.</p>
-            <ul>
-                <li><strong>Google AdSense:</strong> 구글 및 구글 파트너는 쿠키를 사용하여 사용자가 본 사이트 또는 인터넷의 다른 웹사이트를 방문한 기록을 기반으로 맞춤형 광고를 제공합니다.</li>
-                <li>사용자는 <a href="https://myadcenter.google.com/" target="_blank" rel="noopener noreferrer">Google 광고 설정</a>을 방문하여 맞춤설정 광고를 해제할 수 있습니다.</li>
-            </ul>
+            <div id="policy-body-en" class="lang-content en-only" style="display:none;">
+                <h2>1. Information Collection</h2>
+                <p>Fridge Raider (the "Site") does not require registration and does not directly collect personally identifiable information.</p>
+                <h2>2. Third-Party Services</h2>
+                <p>This Site uses Google AdSense to serve ads. Google uses cookies to serve ads based on a user's prior visits to this or other websites.</p>
+            </div>
 
-            <h2>3. 외부 링크</h2>
-            <p>본 사이트에는 외부 웹사이트로의 링크가 포함될 수 있습니다. 본 사이트는 해당 외부 사이트의 개인정보 보호 관행이나 콘텐츠에 대해 책임을 지지 않습니다.</p>
-
-            <h2>4. 개인정보처리방침의 변경</h2>
-            <p>본 개인정보처리방침은 법령 및 사이트 운영 정책에 따라 변경될 수 있으며, 변경 사항은 본 페이지를 통해 즉시 공지됩니다.</p>
-
-            <h2>5. 문의</h2>
-            <p>본 방침에 대한 질문이 있으시면 <a href="mailto:contact@smartrecipe.com">contact@smartrecipe.com</a>으로 문의해 주시기 바랍니다.</p>
+            <h2 data-t="contactTitle">문의</h2>
+            <p data-t="contactText">본 방침에 대한 질문이 있으시면 contact@smartrecipe.com으로 문의해 주시기 바랍니다.</p>
         </section>
     </main>
+    <script type="module" src="shared.js"></script>
+    <script type="module">
+        // Page specific logic for long text blocks
+        const lang = localStorage.getItem('lang') || 'ko';
+        document.querySelectorAll('.lang-content').forEach(el => el.style.display = 'none');
+        document.querySelector(`.${lang}-only`).style.display = 'block';
+        
+        window.addEventListener('storage', () => location.reload()); // Simple sync
+    </script>
 </body>
 </html>
