--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>사이트 소개 | 스마트 레시피 파인더</title>
+    <title>소개 | About - 냉털 | Fridge Raider</title>
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-3971219491693844">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3971219491693844" crossorigin="anonymous"></script>
@@ -15,35 +15,29 @@
 <body>
     <div class="background-texture"></div>
     <nav class="top-nav">
-        <a href="index.html" class="nav-brand">🍳 스마트 레시피 파인더</a>
+        <a href="index.html" class="nav-brand">🍳 <span class="app-name">냉털</span></a>
         <div class="nav-links">
-            <a href="about.html" class="active">소개</a>
-            <a href="privacy.html">개인정보처리방침</a>
+            <a href="about.html" class="active" data-t="about">소개</a>
+            <a href="privacy.html" data-t="privacy">개인정보처리방침</a>
+            <button id="lang-toggle" class="lang-btn">English</button>
         </div>
     </nav>
     <main id="app" class="content-page">
         <header>
-            <h1>스마트 레시피 파인더 소개</h1>
+            <h1 data-t="aboutTitle">서비스 소개</h1>
         </header>
         <section class="policy-content">
-            <h2>우리의 미션</h2>
-            <p><strong>'냉장고 파먹기'를 가장 쉽고 스마트하게.</strong></p>
-            <p>스마트 레시피 파인더는 누구나 냉장고에 남은 재료만으로도 훌륭한 요리를 완성할 수 있도록 돕기 위해 만들어졌습니다. 버려지는 식재료를 줄이고, 매일 "오늘 뭐 먹지?"를 고민하는 여러분의 시간을 절약해 드립니다.</p>
+            <h2 data-t="missionTitle">우리의 미션</h2>
+            <p data-t="missionText">'냉장고 파먹기'를 가장 쉽고 스마트하게. 버려지는 식재료를 줄이고 여러분의 고민 시간을 절약해 드립니다.</p>
 
-            <h2>어떻게 작동하나요?</h2>
-            <p>복잡한 회원가입이나 앱 설치가 필요 없습니다.</p>
+            <h2 data-t="howItWorksTitle">어떻게 작동하나요?</h2>
             <ol>
-                <li><strong>분야 선택:</strong> 한식, 일식, 중식, 양식 중 오늘 끌리는 요리 스타일을 선택합니다.</li>
-                <li><strong>재료 입력:</strong> 현재 주방에 있는 재료들을 입력합니다. (필수 양념은 자동으로 준비되어 있습니다!)</li>
-                <li><strong>매칭 알고리즘:</strong> 입력하신 재료와 가장 많이 일치하는 최적의 레시피를 즉시 추천해 드립니다.</li>
+                <li data-t="step1">오늘 끌리는 요리 스타일을 선택합니다.</li>
+                <li data-t="step2">주방에 있는 재료를 입력합니다.</li>
+                <li data-t="step3">최적의 매칭 레시피를 즉시 확인합니다.</li>
             </ol>
-
-            <h2>우리의 콘텐츠 철학</h2>
-            <p>저희는 단순히 레시피의 '수'를 늘리는 데 집중하지 않습니다. 요리 초보자도 실패 없이 맛있는 요리를 완성할 수 있도록, <strong>정확한 계량 수치</strong>와 <strong>직관적인 행동 강령(상태 묘사 및 팁)</strong>이 포함된 고품질의 레시피만을 엄선하여 제공합니다.</p>
-
-            <h2>가치 창출 및 서비스 유지</h2>
-            <p>본 사이트는 모든 사용자에게 무료로 제공됩니다. 서비스의 유지보수 및 고품질 레시피 데이터의 지속적인 업데이트를 위해 사이트 내에 Google AdSense 광고를 게재하고 있습니다. 여러분의 방문과 이용이 서비스 발전에 큰 힘이 됩니다.</p>
         </section>
     </main>
+    <script type="module" src="shared.js"></script>
 </body>
 </html>
