update: 문의 이메일 주소 변경 (richanseon@gmail.com)

--- a/privacy.html
+++ b/privacy.html
@@ -44,7 +44,7 @@
             </div>
 
             <h2 data-t="contactTitle">문의</h2>
-            <p data-t="contactText">본 방침에 대한 질문이 있으시면 contact@smartrecipe.com으로 문의해 주시기 바랍니다.</p>
+            <p data-t="contactText">본 방침에 대한 질문이 있으시면 richanseon@gmail.com으로 문의해 주시기 바랍니다.</p>
         </section>
     </main>
     <script type="module" src="shared.js"></script>
