feat: 애드센스 승인 최적화를 위한 콘텐츠 보강 및 전 페이지 푸터 추가

--- a/about.html
+++ b/about.html
@@ -28,16 +28,26 @@
         </header>
         <section class="policy-content">
             <h2 data-t="missionTitle">우리의 미션</h2>
-            <p data-t="missionText">'냉장고 파먹기'를 가장 쉽고 스마트하게. 버려지는 식재료를 줄이고 여러분의 고민 시간을 절약해 드립니다.</p>
+            <p data-t="missionText">'냉장고 파먹기'를 가장 쉽고 스마트하게. 우리는 버려지는 식재료를 줄이고, 매일 반복되는 "오늘 뭐 먹지?"라는 고민을 해결하기 위해 탄생했습니다. 단순한 레시피 제공을 넘어, 당신의 주방을 더욱 경제적이고 즐겁게 만드는 것이 우리의 목표입니다.</p>
 
             <h2 data-t="howItWorksTitle">어떻게 작동하나요?</h2>
-            <ol>
-                <li data-t="step1">오늘 끌리는 요리 스타일을 선택합니다.</li>
-                <li data-t="step2">주방에 있는 재료를 입력합니다.</li>
-                <li data-t="step3">최적의 매칭 레시피를 즉시 확인합니다.</li>
-            </ol>
+            <p data-t="step1">1. 한식, 일식, 중식, 양식 중 선호하는 스타일을 선택합니다.</p>
+            <p data-t="step2">2. 현재 냉장고에 남아있는 재료들을 입력합니다.</p>
+            <p data-t="step3">3. 인공지능 매칭 알고리즘이 당신의 재료로 만들 수 있는 최적의 요리를 즉시 추천합니다.</p>
+
+            <h2 data-t="valueTitle">왜 '냉털'인가요?</h2>
+            <p data-t="valueText">우리는 단순히 많은 양의 데이터를 나열하지 않습니다. 실제 요리 현장에서 초보자도 실패하지 않도록 '구체적인 상태 묘사'와 '정확한 계량 수치'가 포함된 엄선된 레시피만을 제공합니다. 환경을 생각하는 제로 웨이스트(Zero Waste) 라이프스타일, 냉털과 함께 시작하세요.</p>
         </section>
     </main>
+    <footer>
+        <div class="footer-content">
+            <p data-t="footerCopy">© 2026 냉털 (Fridge Raider). All rights reserved.</p>
+            <div class="footer-links">
+                <a href="about.html" data-t="about">소개</a>
+                <a href="privacy.html" data-t="privacy">개인정보처리방침</a>
+            </div>
+        </div>
+    </footer>
     <script type="module" src="shared.js"></script>
 </body>
 </html>
