--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
         </section>
     </main>
 
+    <footer>
+        <div class="footer-content">
+            <p data-t="footerCopy">© 2026 냉털 (Fridge Raider). All rights reserved.</p>
+            <div class="footer-links">
+                <a href="about.html" data-t="about">소개</a>
+                <a href="privacy.html" data-t="privacy">개인정보처리방침</a>
+            </div>
+        </div>
+    </footer>
+
     <!-- Recipe Detail Modal -->
     <dialog id="recipe-modal">
         <div class="modal-content">
@@ -115,4 +125,5 @@
 
     <script type="module" src="main.js"></script>
 </body>
+  
 </html>
