--- a/privacy.html
+++ b/privacy.html
@@ -28,33 +28,30 @@
         </header>
         <section class="policy-content">
             <p><strong data-t="privacyDate">시행일: 2026년 2월 28일</strong></p>
+            <p data-t="privacyIntro">본 사이트는 사용자의 개인정보를 소중히 여기며, 관련 법령을 준수합니다.</p>
             
-            <div id="policy-body-ko" class="lang-content ko-only">
-                <h2>1. 수집하는 개인정보 항목</h2>
-                <p>냉털(이하 "본 사이트")은 회원가입을 요구하지 않으며, 사용자를 식별할 수 있는 개인정보를 직접적으로 수집하지 않습니다.</p>
-                <h2>2. 제3자 서비스</h2>
-                <p>본 사이트는 구글 애드센스(Google AdSense)를 통해 광고를 게재하며, 구글은 쿠키를 사용하여 사용자의 방문 기록을 바탕으로 광고를 제공합니다.</p>
-            </div>
+            <h2 data-t="policy1Title">1. 개인정보 수집 및 이용</h2>
+            <p data-t="policy1Text">본 서비스는 별도의 회원가입 절차가 없으며, 이름, 이메일, 연락처 등 사용자를 식별할 수 있는 정보를 직접 수집하지 않습니다. 사용자가 입력하는 재료 데이터는 오직 레시피 매칭을 위한 용도로만 사용되며, 서버에 저장되지 않고 브라우저 종료 시 삭제됩니다.</p>
 
-            <div id="policy-body-en" class="lang-content en-only" style="display:none;">
-                <h2>1. Information Collection</h2>
-                <p>Fridge Raider (the "Site") does not require registration and does not directly collect personally identifiable information.</p>
-                <h2>2. Third-Party Services</h2>
-                <p>This Site uses Google AdSense to serve ads. Google uses cookies to serve ads based on a user's prior visits to this or other websites.</p>
-            </div>
+            <h2 data-t="policy2Title">2. 쿠키 및 광고 게재</h2>
+            <p data-t="policy2Text">구글(Google)을 포함한 제3자 제공업체는 쿠키를 사용하여 사용자의 이전 방문 기록을 바탕으로 광고를 게재합니다. 구글의 광고 쿠키를 사용하면 구글과 그 파트너가 본 사이트 및 인터넷상의 다른 사이트 방문 기록을 토대로 사용자에게 맞춤형 광고를 제공할 수 있습니다.</p>
+
+            <h2 data-t="policy3Title">3. 맞춤형 광고 해제</h2>
+            <p data-t="policy3Text">사용자는 구글의 '광고 설정' 페이지를 방문하여 맞춤설정 광고 게재를 해제할 수 있습니다. 또는 www.aboutads.info를 방문하여 제3자 제공업체의 맞춤설정 광고용 쿠키 사용을 차단할 수 있습니다.</p>
 
             <h2 data-t="contactTitle">문의</h2>
-            <p data-t="contactText">본 방침에 대한 질문이 있으시면 richanseon@gmail.com으로 문의해 주시기 바랍니다.</p>
+            <p data-t="contactText">본 방침이나 서비스 이용에 관한 문의는 richanseon@gmail.com으로 연락 주시기 바랍니다.</p>
         </section>
     </main>
+    <footer>
+        <div class="footer-content">
+            <p data-t="footerCopy">© 2026 냉털 (Fridge Raider). All rights reserved.</p>
+            <div class="footer-links">
+                <a href="about.html" data-t="about">소개</a>
+                <a href="privacy.html" data-t="privacy">개인정보처리방침</a>
+            </div>
+        </div>
+    </footer>
     <script type="module" src="shared.js"></script>
-    <script type="module">
-        // Page specific logic for long text blocks
-        const lang = localStorage.getItem('lang') || 'ko';
-        document.querySelectorAll('.lang-content').forEach(el => el.style.display = 'none');
-        document.querySelector(`.${lang}-only`).style.display = 'block';
-        
-        window.addEventListener('storage', () => location.reload()); // Simple sync
-    </script>
 </body>
 </html>
