--- a/about.html
+++ b/about.html
@@ -28,14 +28,14 @@
         </header>
         <section class="policy-content">
             <h2 data-t="missionTitle">우리의 미션</h2>
-            <p data-t="missionText">'냉장고 파먹기'를 가장 쉽고 스마트하게. 우리는 버려지는 식재료를 줄이고, 매일 반복되는 "오늘 뭐 먹지?"라는 고민을 해결하기 위해 탄생했습니다. 단순한 레시피 제공을 넘어, 당신의 주방을 더욱 경제적이고 즐겁게 만드는 것이 우리의 목표입니다.</p>
+            <p data-t="missionText">'냉장고 털기'를 가장 쉽고 스마트하게. 우리는 버려지는 식재료를 줄이고, 매일 반복되는 "오늘 뭐 먹지?"라는 고민을 해결하기 위해 탄생했습니다. 단순한 레시피 제공을 넘어, 당신의 주방을 더욱 경제적이고 즐겁게 만드는 것이 우리의 목표입니다.</p>
 
             <h2 data-t="howItWorksTitle">어떻게 작동하나요?</h2>
             <p data-t="step1">1. 한식, 일식, 중식, 양식 중 선호하는 스타일을 선택합니다.</p>
             <p data-t="step2">2. 현재 냉장고에 남아있는 재료들을 입력합니다.</p>
             <p data-t="step3">3. 인공지능 매칭 알고리즘이 당신의 재료로 만들 수 있는 최적의 요리를 즉시 추천합니다.</p>
 
-            <h2 data-t="valueTitle">왜 '냉털'인가요?</h2>
+            <h2 data-t="valueTitle">왜 '냉털'이 좋은가요?</h2>
             <p data-t="valueText">우리는 단순히 많은 양의 데이터를 나열하지 않습니다. 실제 요리 현장에서 초보자도 실패하지 않도록 '구체적인 상태 묘사'와 '정확한 계량 수치'가 포함된 엄선된 레시피만을 제공합니다. 환경을 생각하는 제로 웨이스트(Zero Waste) 라이프스타일, 냉털과 함께 시작하세요.</p>
         </section>
     </main>
