feat: 브랜드 이미지(logo3, logo4) 적용 및 AI 로딩 화면 디자인 개선

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 <body>
     <div class="background-texture"></div>
     <nav class="top-nav">
-        <a href="index.html" class="nav-brand">🍳 <span class="app-name">냉털</span></a>
+        <a href="index.html" class="nav-brand">
+            <img src="assets/images/logo4.png" alt="Mascot" class="brand-logo">
+            <span class="app-name">냉털</span>
+        </a>
         <div class="nav-links">
             <a href="about.html" id="about-link">소개</a>
             <a href="privacy.html" id="privacy-link">개인정보처리방침</a>
@@ -29,7 +32,10 @@
     </nav>
     <main id="app">
         <header>
-            <h1 class="app-name">냉털</h1>
+            <div class="hero-header">
+                <img src="assets/images/logo4.png" alt="Mascot" class="hero-logo">
+                <h1 class="app-name">냉털</h1>
+            </div>
             <p id="tagline">오늘 뭐 먹지? 재료만 입력하면 알려드려요!</p>
         </header>
 
