style: 로고 비율 최적화 및 버튼 디자인 리뉴얼, feat: AI 연동 로직 보강 및 최소 10초 로딩 적용

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>소개 | About - 냉털 | Fridge Raider</title>
+    <title>소개 | About - 냉장고 털기 | Fridge Raider</title>
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-3971219491693844">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3971219491693844" crossorigin="anonymous"></script>
@@ -35,13 +35,13 @@
             <p data-t="step2">2. 현재 냉장고에 남아있는 재료들을 입력합니다.</p>
             <p data-t="step3">3. 인공지능 매칭 알고리즘이 당신의 재료로 만들 수 있는 최적의 요리를 즉시 추천합니다.</p>
 
-            <h2 data-t="valueTitle">왜 '냉털'이 좋은가요?</h2>
-            <p data-t="valueText">우리는 단순히 많은 양의 데이터를 나열하지 않습니다. 실제 요리 현장에서 초보자도 실패하지 않도록 '구체적인 상태 묘사'와 '정확한 계량 수치'가 포함된 엄선된 레시피만을 제공합니다. 환경을 생각하는 제로 웨이스트(Zero Waste) 라이프스타일, 냉털과 함께 시작하세요.</p>
+            <h2 data-t="valueTitle">왜 '냉장고 털기'가 좋은가요?</h2>
+            <p data-t="valueText">우리는 단순히 많은 양의 데이터를 나열하지 않습니다. 실제 요리 현장에서 초보자도 실패하지 않도록 '구체적인 상태 묘사'와 '정확한 계량 수치'가 포함된 엄선된 레시피만을 제공합니다. 환경을 생각하는 제로 웨이스트(Zero Waste) 라이프스타일, 냉장고 털기와 함께 시작하세요.</p>
         </section>
     </main>
     <footer>
         <div class="footer-content">
-            <p data-t="footerCopy">© 2026 냉털 (Fridge Raider). All rights reserved.</p>
+            <p data-t="footerCopy">© 2026 냉장고 털기 (Fridge Raider). All rights reserved.</p>
             <div class="footer-links">
                 <a href="about.html" data-t="about">소개</a>
                 <a href="privacy.html" data-t="privacy">개인정보처리방침</a>
