--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="top-nav">
         <a href="index.html" class="nav-brand">
             <img src="assets/images/logo4.png" alt="Mascot" class="brand-logo">
-            <span class="app-name">냉털</span>
+            <span class="app-name">냉장고 털기</span>
         </a>
         <div class="nav-links">
             <a href="about.html" id="about-link">소개</a>
@@ -34,7 +34,7 @@
         <header>
             <div class="hero-header">
                 <img src="assets/images/logo4.png" alt="Mascot" class="hero-logo">
-                <h1 class="app-name">냉털</h1>
+                <h1 class="app-name">냉장고 털기</h1>
             </div>
             <p id="tagline">오늘 뭐 먹지? 재료만 입력하면 알려드려요!</p>
         </header>
@@ -118,7 +118,7 @@
 
     <footer>
         <div class="footer-content">
-            <p data-t="footerCopy">© 2026 냉털 (Fridge Raider). All rights reserved.</p>
+            <p data-t="footerCopy">© 2026 냉장고 털기 (Fridge Raider). All rights reserved.</p>
             <div class="footer-links">
                 <a href="about.html" data-t="about">소개</a>
                 <a href="privacy.html" data-t="privacy">개인정보처리방침</a>
