feat: 음식 이미지 교체 및 큐진 카드 크기 조정 (5/7 비율)

--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
             <h2 class="section-title">1단계: 요리 분야를 선택하세요</h2>
             <div class="cuisine-grid">
                 <button class="cuisine-card" data-cuisine="korean">
-                    <span class="emoji">🍚</span>
+                    <img src="assets/images/hansik1.png" alt="한식" class="cuisine-image">
                     <span class="label">한식</span>
                 </button>
                 <button class="cuisine-card" data-cuisine="japanese">
-                    <span class="emoji">🍣</span>
+                    <img src="assets/images/el.png" alt="일식" class="cuisine-image">
                     <span class="label">일식</span>
                 </button>
                 <button class="cuisine-card" data-cuisine="chinese">
-                    <span class="emoji">🥡</span>
+                    <img src="assets/images/jung.png" alt="중식" class="cuisine-image">
                     <span class="label">중식</span>
                 </button>
                 <button class="cuisine-card" data-cuisine="western">
-                    <span class="emoji">🍝</span>
+                    <img src="assets/images/yang.png" alt="양식" class="cuisine-image">
                     <span class="label">양식</span>
                 </button>
             </div>
