feat: 레시피 인명 제거, 로딩 영상 축소, 단계 텍스트 삭제 및 UI 중앙 정렬

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- Step 1: Cuisine Selection -->
         <section id="cuisine-section" class="step active">
-            <h2 class="section-title">1단계: 요리 분야를 선택하세요</h2>
+            <h2 class="section-title">요리 분야를 선택하세요</h2>
             <div class="cuisine-grid">
                 <button class="cuisine-card" data-cuisine="korean">
                     <img src="assets/images/hansik1.png" alt="한식" class="cuisine-image">
@@ -65,7 +65,7 @@
 
         <!-- Step 2: Ingredient Input -->
         <section id="ingredient-section" class="step">
-            <h2 class="section-title">2단계: 남은 재료를 입력하세요</h2>
+            <h2 class="section-title">남은 재료를 입력하세요</h2>
             <div class="cozy-card">
                 <p class="subtitle"><span id="selected-cuisine-prefix">선택한 분야: </span><span id="selected-cuisine-display" style="color: var(--primary-dark); font-weight: 800;">한식</span></p>
                 
@@ -85,7 +85,7 @@
 
         <!-- Step 3: Recipe Results -->
         <section id="recipe-section" class="step">
-            <h2 class="section-title">3단계: 추천 레시피</h2>
+            <h2 class="section-title">추천 레시피</h2>
             <div id="recipe-grid" class="recipe-grid">
                 <!-- Recipe cards will be injected here -->
             </div>
