feat: rename app to '냉장고 털기' and enhance localization for loading and results

--- a/privacy.html
+++ b/privacy.html
@@ -19,7 +19,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>개인정보처리방침 | Privacy Policy - 냉털 | Fridge Raider</title>
+    <title>개인정보처리방침 | Privacy Policy - 냉장고 털기 | Fridge Raider</title>
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-3971219491693844">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3971219491693844" crossorigin="anonymous"></script>
@@ -31,7 +31,7 @@
 <body>
     <div class="background-texture"></div>
     <nav class="top-nav">
-        <a href="index.html" class="nav-brand">🍳 <span class="app-name">냉털</span></a>
+        <a href="index.html" class="nav-brand">🍳 <span class="app-name">냉장고 털기</span></a>
         <div class="nav-links">
             <a href="about.html" data-t="about">소개</a>
             <a href="privacy.html" class="active" data-t="privacy">개인정보처리방침</a>
@@ -61,7 +61,7 @@
     </main>
     <footer>
         <div class="footer-content">
-            <p data-t="footerCopy">© 2026 냉털 (Fridge Raider). All rights reserved.</p>
+            <p data-t="footerCopy">© 2026 냉장고 털기 (Fridge Raider). All rights reserved.</p>
             <div class="footer-links">
                 <a href="about.html" data-t="about">소개</a>
                 <a href="privacy.html" data-t="privacy">개인정보처리방침</a>
