--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 <body>
     <div class="background-texture"></div>
     <nav class="top-nav">
-        <a href="index.html" class="nav-brand">🍳 <span class="app-name">냉털</span></a>
+        <a href="index.html" class="nav-brand">🍳 <span class="app-name">냉장고 털기</span></a>
         <div class="nav-links">
             <a href="about.html" class="active" data-t="about">소개</a>
             <a href="privacy.html" data-t="privacy">개인정보처리방침</a>
