--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>냉털 | Fridge Raider</title>
+    <title>냉장고 털기 | Fridge Raider</title>
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-3971219491693844">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3971219491693844" crossorigin="anonymous"></script>
@@ -38,7 +38,7 @@
     <nav class="top-nav">
         <a href="index.html" class="nav-brand">
             <img src="assets/images/logo4.png" alt="Mascot" class="brand-logo">
-            <span class="app-name">냉털</span>
+            <span class="app-name">냉장고 털기</span>
         </a>
         <div class="nav-links">
             <a href="about.html" id="about-link">소개</a>
@@ -51,7 +51,7 @@
         <header>
             <div class="hero-header">
                 <img src="assets/images/logo4.png" alt="Mascot" class="hero-logo">
-                <h1 class="app-name">냉털</h1>
+                <h1 class="app-name">냉장고 털기</h1>
                 <p id="tagline">오늘 뭐 먹지? 재료만 입력하면 알려드려요!</p>
             </div>
         </header>
@@ -114,7 +114,7 @@
 
     <footer>
         <div class="footer-content">
-            <p data-t="footerCopy">© 2026 냉털 (Fridge Raider). All rights reserved.</p>
+            <p data-t="footerCopy">© 2026 냉장고 털기 (Fridge Raider). All rights reserved.</p>
             <div class="footer-links">
                 <a href="about.html" data-t="about">소개</a>
                 <a href="privacy.html" data-t="privacy">개인정보처리방침</a>
